chore: first day

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,9 +90,11 @@ body {
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
+      #042940
     )
-    rgb(var(--background-start-rgb));
+    #042940;
+    padding: 1rem 6rem 0;
+
 }
 
 a {
